Fix url join bug